--- a/misite/blog/templates/blog/post_list.html
+++ b/misite/blog/templates/blog/post_list.html
@@ -1,18 +1,13 @@
-<html>
-    <head>
-        <title>Gran blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="">El Blog de Wingo</a></h1>
-        </div>
+{% extends 'blog/base.html' %}
 
-       {% for post in posts %}
-    		<div>
-        		<h1><a href="">{{ post.title }}</a></h1>
-        		<p>{{ post.text|linebreaks }}</p>
-        		<p>published: {{ post.published_date }}</p>
-    		</div>
-		{% endfor %}
-    </body>
-</html>
+{% block content %}
+{% for post in posts %}
+    <div class="post">
+        <div class="date">
+            {{ post.published_date }}
+        </div>
+        <h1><a href="{% url 'blog.views.post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+        <p>{{ post.text|linebreaks }}</p>
+    </div>
+{% endfor %}
+{% endblock content %}
